--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "apollo-server-express": "^3.0.2",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
