--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "graphql": "^15.5.1",
     "node": "^16.5.0"
   }
